# pachca

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: chats.rst  conf.py  profile.rst
docs/source/: conf.py  exceptions.rst  index.rst  members.rst  messages.rst
src/pachca/: __init__.py  exceptions.py  file.py  pachca.py
src/pachca/tests/: conftest.py  test_chats.py  test_files.py  test_members.py  test_messages.py  test_profile.py
