[project]
name = "pachca"
version = "0.0.1"
authors = [
  { name="Yury Koryakov", email="ykoryakov@yandex.ru" },
]
description = "Python API client for Pachca chat."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "/src/pachca/tests",
]

[project.urls]
Homepage = "https://github.com/ykoryakov/pachca"
Issues = "https://github.com/ykoryakov/pachca/issues"
